--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           "@portal/config": "http://localhost:8081/dist/single-spa.config.js",
           "@portal/andersSvelter": "http://localhost:51155/build/bundle.js",
           "@portal/createMeeting": "http://172.28.0.166:4200/main.js",
-          "@portal/kent": "http://172.28.0.170:1234/src.a2b27638.js"
+          "@portal/meetings": "http://172.28.0.170:1234/src.a2b27638.js"
         }
       }
     </script>
@@ -59,8 +59,8 @@
     </style>
 
     <div class="container">
-      <div class="item-a">a</div>
-      <div class="item-b"><div id="andersSvelter"></div></div>
+      <div class="item-a"><div id="andersSvelter"></div></div>
+      <div class="item-b"></div>
       <div class="item-c" id="meeting-list"></div>
       <div class="item-d" id="meeting-detail">f</div>
     </div>
