Meetings kind of works

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="item-a"><div id="andersSvelter"></div></div>
       <div class="item-b"></div>
       <div class="item-c" id="meeting-list"></div>
-      <div class="item-d" id="meeting-detail">f</div>
+      <div class="item-d" id="meeting-overview">f</div>
     </div>
   </body>
 </html>
